ves-middle/tests/t1_test_cannot_assign_to_let.test
let x = "ok"
x = "error"

let y = "ok"
mut y = "ok"
y = "ok"

let z = "ok"
{
    let z = "ok"
    {
        mut z = "ok"
        z = "ok"
    }
    z = "error"
}
z = "error"

%output

error: Cannot assign twice to the immutable variable x
  ┌─ <source: #fe7e17c68f174bb0>:2:1
  │
2 │ x = "error"
  │ ^
  │ │
  │ help: Consider replacing `let` with `mut` to make the variable mutable

error: Cannot assign twice to the immutable variable z
   ┌─ <source: #fe7e17c68f174bb0>:15:5
   │
15 │     z = "error"
   │     ^
   │     │
   │     help: Consider replacing `let` with `mut` to make the variable mutable

error: Cannot assign twice to the immutable variable z
   ┌─ <source: #fe7e17c68f174bb0>:17:1
   │
17 │ z = "error"
   │ ^
   │ │
   │ help: Consider replacing `let` with `mut` to make the variable mutable
